--- a/Automation/action-drip.mdx
+++ b/Automation/action-drip.mdx
@@ -5,11 +5,6 @@ description: "Drip action is used to limit or prevent a high number of execution
 
 [Video Placeholder]
 
-### More Tutorials From the Community
-
-[Video Placeholder ]
-[Video Placeholder ]
-[Video Placeholder ]
 
 Drip action is used to limit or prevent a high number of executions simultaneously. Set the batch size and enter the next step in a predetermined number for the given interval.
 
@@ -21,14 +16,14 @@ Drip action is used to limit or prevent a high number of executions simultaneous
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/155010399573/original/sgZWS-770r7QimmA1f7G_WJggg6q9VfUDA.png?1697619830)
 
-### Batch Size
+#### Batch Size
 
 The batch size can be set to a minimum of one and a maximum of ten thousand per batch.
 
-### Drip Interval
+#### Drip Interval
 
 Drip interval can be set in minutes/hours/days ranging from one minute to seven days
 
-### Example
+#### Example
 
 Say, 10k contacts enter a workflow, or 5k contacts proceed from the wait step to the next step. To control the high number of executions you can set a batch size of 50 and an interval of 10 minutes to allow 50 contacts to proceed to the next step every 10 minutes.
