--- a/Automation/action-if-or-else-date-type-field-conditions.mdx
+++ b/Automation/action-if-or-else-date-type-field-conditions.mdx
@@ -6,20 +6,20 @@ description: "Compare any Date type field with the following conditions"
 *Compare any Date type field with the following conditions:*
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48229985627/original/159LMUPQTU_FNrOAnKJinzRADJrxFb_CMg.png?1654169676)
 
-### Condition based on recent days
+#### Condition based on recent days
 Today
 Tomorrow
 Yesterday  
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48229985759/original/wVPRMIZ00kH9kEt809SBzcNyGmwEyodnxA.png?1654169706)
 
-### Condition based on number of days/weeks/months/years
+#### Condition based on number of days/weeks/months/years
 After
 Before
 In the Next
 In the Last
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48229985895/original/qTOPWtgeMY84w6bc6CfqKtmBfWOh7aWdRQ.png?1654169728)
 
-### Condition based on a particular date
+#### Condition based on a particular date
 On
 After date  
 Before date
