--- a/Automation/how-to-attach-custom-values-mms-to-sms-messages-in-workflows.mdx
+++ b/Automation/how-to-attach-custom-values-mms-to-sms-messages-in-workflows.mdx
@@ -11,7 +11,7 @@ Custom values are great for leveraging snapshots and your favorite workflow(s). 
 
 **Step 1:** Setup your custom value URL
 
-**Head into the location settings > Custom Values > + Add Custom Value > Enter MMS URL**
+Head into the location settings > Custom Values > + Add Custom Value > Enter MMS URL
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48240187218/original/Cq5T3LD3wiScR2JwiibCexevGo9I4SOlLQ.gif?1658417559)
 
@@ -21,25 +21,16 @@ Now that you are in your workflow make sure to attach the custom value as an att
 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48240188567/original/PDE7_BYhWRlwXQ1KbFOTDcncrlAhAotBGQ.gif?1658417802)
 
-**Please note:**
->There are strict requirements for MMS sizes when it comes to different carriers. These limitations are set by the carriers.
+**Please note:** There are strict requirements for MMS sizes when it comes to different carriers. These limitations are set by the carriers.
 
-## Troubleshooting
+### Troubleshooting
 
-### What is the maximum MMS size when sending SMS?
-| **Carrier** | **Long code MMS attachment size** |**Toll-Free MMS attachment size**|  **Shortcode MMS attachment size**
-| AT&T | 0.6 MB | 0.6 MB | 0.6 MB |
-| Sprint | 1.4 MB | 0.6 MB | 1.4 MB |
-| T-mobile | 1.5 MB | 0.6 MB | 1.0 MB |
-| Verizon | 0.675 MB | 0.6 MB | 1.2 MB |
-
-### What are the support file types for MMS when sending via SMS?
-
+What are the support file types for MMS when sending via SMS?
 -   jpeg
 -   png
 -   gif
 
-### My custom value does not work when the message is sent.
+#### My custom value does not work when the message is sent.
 
 Please double-check to make sure:
 
