--- a/Automation/how-to-create-a-birthday-reminder-workflow.mdx
+++ b/Automation/how-to-create-a-birthday-reminder-workflow.mdx
@@ -9,8 +9,7 @@ Elevate your customer engagement with a Birthday Reminder Workflow Trigger that 
 
 ### What is the Birthday Reminder Workflow trigger?
 
-**Please Note:**
->The default Birthday Reminder Workflow Trigger activates at 8 AM based on your account's time zone. It searches all your contacts for their dates of birth and fires off for those whose birthday is on that date at 8 AM. **You do not need to add people to this workflow manually.** To customize the timing of your birthday messages, utilize Time Delay Wait Steps within the workflow, allowing you to send communications at the desired hour.
+**Please Note:** The default Birthday Reminder Workflow Trigger activates at 8 AM based on your account's time zone. It searches all your contacts for their dates of birth and fires off for those whose birthday is on that date at 8 AM. **You do not need to add people to this workflow manually.** To customize the timing of your birthday messages, utilize Time Delay Wait Steps within the workflow, allowing you to send communications at the desired hour.
 
 The Birthday Reminder Workflow Trigger is an essential tool to improve customer engagement by automating and personalizing birthday-related communications. By initiating a workflow when a contact's birthday is approaching or takes place, you can deliver personalized birthday wishes, promotional offers, or special discounts to your contacts, resulting in strengthened relationships and increased brand loyalty.
 
