--- a/Automation/standard-triggers-contact-tag.mdx
+++ b/Automation/standard-triggers-contact-tag.mdx
@@ -50,4 +50,4 @@ You can also add tags during a CSV import by the advanced options of the import 
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48253160766/original/dLXRneYYvywN9EzigyuPf2g9vD2bEM61HA.gif?1664199340)
   
 **Please Note:**
->CSV Imports are also used to update the tags of existing contacts, if Allow Duplicate contacts are turned off and the Email and Phone of the contacts being imported are the same as the already existing ones.
+CSV Imports are also used to update the tags of existing contacts, if Allow Duplicate contacts are turned off and the Email and Phone of the contacts being imported are the same as the already existing ones.
