--- a/Automation/triggers-overview.mdx
+++ b/Automation/triggers-overview.mdx
@@ -11,7 +11,7 @@ Triggers are conditional statements (similar to Zaps in Zapier) that connect all
 
 Think of triggers as the wiring or 'secret sauce' in the back end making all the cool things Monstro does happen
 
-_Example:_
+**Example:**
 
 Let's say you have set up a Zap in Zapier to push leads into a Monstro campaign when they fill out a form embedded in a ClickFunnels landing page. You also want to send an SMS notification to your client to let them know when this happens (the equivalent to letting them know they have a new lead)
 
