--- a/Automation/workflow-trigger-payment-received.mdx
+++ b/Automation/workflow-trigger-payment-received.mdx
@@ -10,9 +10,13 @@ The Payment Received trigger is designed to act as a centralized mechanism for c
 The Payment Received trigger automates processes and actions based on incoming payments when used in a workflow. It can be configured to respond to specific payment events, such as successful or failed transactions or particular products and payment sources. Here are some detailed functionalities and use cases:
 
 **Workflow automation:** The trigger initiates the Workflow whenever a payment is received, allowing for automated actions like sending confirmation emails, generating invoices, or updating customer records in a CRM.
+
 **Customization with filters:** Users can apply various filters to the trigger, such as transaction type, payment source, or product. This enables the creation of targeted workflows for specific scenarios, like subscription renewals, or failed payments.
+
 **Real-time response:** The trigger operates in real-time, enabling businesses to respond quickly to customer transactions. This can help improve customer satisfaction by providing immediate feedback or resolving issues promptly.
+
 **Conditional actions:** By using if/else conditions in the Workflow, different actions can be executed depending on the payment characteristics, such as the amount, source, or transaction status.
+
 **Reporting and analytics:** The trigger can capture payment data for analysis and reporting purposes. By monitoring incoming payments and their attributes, businesses can gain insights into sales performance, customer behavior, and potential areas for improvement.
 
 ### What are some excellent usage cases for this, along with their benefits?
@@ -61,8 +65,7 @@ Benefits: Utilizing Text2Pay links with the Payment Received trigger allows busi
 Inside a workflow, add a workflow trigger called  **Payment Received.**
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48294607854/original/NEpU4MrSK-AuNJon1IMs032agtQ4d-U6Vw.png?1682522580)
 
-**Please Note:**
->Choosing a filter allows you to choose its respective Sub-filters the next time you add a filter to the same workflow trigger. 
+**Please Note:** Choosing a filter allows you to choose its respective Sub-filters the next time you add a filter to the same workflow trigger. 
 
 ### Workflow Trigger Filters
 **for Payment Received Workflow Trigger**
