--- a/Automation/action-update-contact-field-date-type-field.mdx
+++ b/Automation/action-update-contact-field-date-type-field.mdx
@@ -6,14 +6,14 @@ description: "Update Date type fields with the following options"
 *Update Date type fields with the following options:*
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48229994125/original/Q9MsZm0kb2DcOOB21N0I6-95EtpPoRH99w.png?1654171325)
 
-### Custom Date
+#### Custom Date
 
 Update using custom values/fields in the recommended formats:  
 MM-DD-YYYY, Ex : 12-21-2021  
 DD-MMM-YYYY, Ex : 21-OCT-2021  
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48229994192/original/jhHTagkMnBHsUHepl3lpFeWsAouSsrlqdQ.png?1654171342)
 
-### Current Date
+#### Current Date
 
 Updates the current date to the selected field
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48229994336/original/M0b4XIMgKo7G-O0hpgGnab0n8fw5Z_8jmg.png?1654171355)](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48229994336/original/M0b4XIMgKo7G-O0hpgGnab0n8fw5Z_8jmg.png?1654171355)
@@ -22,7 +22,7 @@ Updates the current date to the selected field
 
   
 
-### Specific Date
+#### Specific Date
 
 Updates the specific date selected  
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48229994370/original/N828prua2r7KzsH5iub81N1DQxbw47MB8Q.png?1654171368)
