--- a/Automation/workflow-builder-wait-event.mdx
+++ b/Automation/workflow-builder-wait-event.mdx
@@ -18,4 +18,4 @@ The wait event is a special type of workflow action that allows you to pause the
 ## FAQ
 
 ### How to set up a _Wait for_ _Contact Reply_ wait step
-[Video Placeholder https://www.loom.com/share/b53b7601a891432ca3dc3368c685ea6b?sid=52a59262-2712-4f35-9849-9536ae65277b]
+[Video Placeholder]
